Bug 161864 - RTF import SYMBOL field with wrong font height
Summary: RTF import SYMBOL field with wrong font height
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks: RTF-Fields
  Show dependency treegraph
 
Reported: 2024-07-02 09:06 UTC by Oliver Specht (CIB)
Modified: 2024-08-12 14:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file with bullet fields with different font height (1.88 KB, application/msword)
2024-07-02 09:06 UTC, Oliver Specht (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2024-07-02 09:06:46 UTC
Created attachment 195079 [details]
Sample file with bullet fields with different font height

Load the attached file.
The font height applied before each bullet (SYMBOL field) is not applied to the bullet.
Comment 1 m_a_riosv 2024-07-02 21:52:54 UTC
Reproducible
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bff48f885e3aad560776a42e451a735ed6c72c57
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 Commit Notification 2024-07-15 19:12:14 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0b7201bc4299f76c8a3e085f213ffeb7ea9e8556

tdf#161864 Apply character properties to SYMBOL field

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Gabor Kelemen (Collabora) 2024-08-12 14:33:01 UTC
Verified in

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 59cb37a210675d4269c2fcd48feeffe942538891
CPU threads: 14; OS: Windows 10 X86_64 (10.0 build 19045); UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default

Bullets are rendered with the correct font size, matching the text.