tdf#161864 Apply character properties to SYMBOL field

In RTF import character attributes are applied to symbols
imported from \field{ SYMBOL }.

Change-Id: I088c47e799380813dce19fd9823cdba6b8048af1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169864
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Tested-by: Jenkins